Add Custom Field Feature to PlanningAppStates

--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -5,7 +5,7 @@
         background-color : #e20b0b; 
   }
   </style> -->
-
+  {{ error | json }}
 <form class="form-horizontal" *ngIf="planningApp.planningStatus=='Terminated'">
 <div class="form-group">
       <div class="col-sm-2">
