--- a/ClientApp/app/components/stateinitialiser-list/stateinitialiser-list.component.html
+++ b/ClientApp/app/components/stateinitialiser-list/stateinitialiser-list.component.html
@@ -31,7 +31,7 @@
         <td>{{ v.name }}</td>
         <td>{{ v.description}}</td>
         <td>
-            <a [routerLink]="['/stateinitialisers/', v.id]">View</a>
+            <a [routerLink]="['/stateinitialisers/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
         </td>
         </tr>
     </tbody>
