--- a/ClientApp/app/components/customer-list/customer-list.component.html
+++ b/ClientApp/app/components/customer-list/customer-list.component.html
@@ -36,8 +36,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
+      <th class="glyphicon glyphicon-user"></th>
       <th>Customer Address</th>
       <th class="glyphicon glyphicon-envelope"></th>
       <th>Home No</th>
@@ -46,8 +45,7 @@
   </thead>
 
   <tr *ngFor="let v of queryResult.items">
-      <td>{{ v.firstName}}</td>
-      <td>{{ v.lastName }}</td>
+      <td>{{ v.fullName}}</td>
       <td>{{ v.customerAddressSummary }}</td>
       <td>{{ v.emailAddress }}</td>
       <td>{{ v.telephoneHome }}</td>
@@ -56,7 +54,7 @@
         <a [routerLink]="['/customers/edit/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
       </td>
       <td>
-          <a [routerLink]="['/customers/planningapps/', v.id]" class="btn btn-info btn-xs">Applications <span class="badge">5</span></a>
+          <a [routerLink]="['/customers/planningapps/', v.id]" class="btn btn-info btn-xs">Applications <span class="badge">{{ v.planningAppsCount }}</span></a>
         </td>
     </tr>
   </tbody>
