--- a/ClientApp/app/components/planningappcompleted-list/planningappcompleted-list.component.html
+++ b/ClientApp/app/components/planningappcompleted-list/planningappcompleted-list.component.html
@@ -45,7 +45,8 @@
 <table class="table">
   <thead>
     <tr>
-      <th>App Id</th>
+      <th></th>
+      <th>Reference Id</th>
       <th>Customer</th>
       <th>Description</th>
       <th>Status</th>
@@ -53,15 +54,20 @@
     </tr>
   </thead>
 
-  <tr *ngFor="let v of queryResult.items" [class.highlightTerminated]="v.planningStatus == 'Terminated'"
-                                          [class.highlightArchived]="v.planningStatus == 'Archived'">
-      <td>{{ v.id }}</td>
+  <tr *ngFor="let v of queryResult.items" >
+      <div *ngIf="v.planningStatus=='Complete'">
+          <td><button class="btn btn-success btn-xs glyphicon glyphicon-ok" type="button"></button> </td>
+      </div>
+      <div *ngIf="v.planningStatus=='Terminated'">
+          <td><button class="btn btn-danger btn-xs glyphicon glyphicon-ban-circle" type="button"></button></td>
+    </div>
+      <td>{{ v.planningReferenceId }}</td>
       <td>{{ v.customerName}}</td>
       <td>{{ v.name }}</td>
       <td>{{ v.planningStatus }}</td>
       <td>{{ v.completionDate }}</td>
       <td>
-        <a [routerLink]="['/planningapps/', v.id]">View</a>
+        <a [routerLink]="['/planningapps/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
       </td>
     </tr>
   </tbody>
