--- a/ClientApp/app/components/planningappstate-form/planningappstate-form.component.html
+++ b/ClientApp/app/components/planningappstate-form/planningappstate-form.component.html
@@ -64,11 +64,13 @@
                 <div class="form-group">
                     <div class="control-label col-sm-2"></div>
                     <div class="col-sm-3">
-                        <button class="btn btn-primary" type="button" (click)="submit()">Save</button>    
+                        <button class="btn btn-primary" type="button" (click)="submit()">Save</button>   
                     </div>        
-                    <div class="col-sm-7"></div>  
+                    <div class="col-sm-1">  
+                        <button class="btn btn-primary" [routerLink]="['/planningapps/', planningAppState.planningAppId]" type="button">Close</button>    
+                    </div>    
+                    <div class="col-sm6"></div>  
                 </div> 
-
             </form>
         <div>
     </div>
@@ -89,18 +91,21 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2">{{r.name}}</label>
                                 <div class="col-sm-5">
-                                    <input id="{{ r.id }}" [ngStyle]="{'background-color': r.isMandatory==true? 'Tomato' : ''} "type="text" class="form-control" [(ngModel)]="r.value" name="{{ r.name }}" placeholder="{{ r.name }}"> 
+                                    <input id="{{ r.id }}" [disabled]="planningAppState.stateStatus == 'Complete' " [ngStyle]="{'background-color': r.isMandatory==true? 'Tomato' : ''} "type="text" class="form-control" [(ngModel)]="r.value" name="{{ r.name }}" placeholder="{{ r.name }}"> 
                                 </div>
                             <div class="col-sm-5"></div>
                         </div>
                     </div>
                     <div class="form-group">
-                            <div class="control-label col-sm-2"></div>
-                            <div class="col-sm-3">
-                                <button class="btn btn-primary" type="button" (click)="submit()">Save</button>    
-                            </div>        
-                            <div class="col-sm-7"></div>  
-                        </div> 
+                        <div class="control-label col-sm-2"></div>
+                        <div class="col-sm-3">
+                            <button class="btn btn-primary" type="button" (click)="submit()">Save</button>   
+                        </div>        
+                        <div class="col-sm-1">  
+                            <button class="btn btn-primary" [routerLink]="['/planningapps/', planningAppState.planningAppId]" type="button">Close</button>    
+                        </div>    
+                        <div class="col-sm6"></div>  
+                    </div> 
                 </form> 
         </div> 
     </div>
