--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -1,10 +1,11 @@
-<h1>Dashboard not implemented</h1>
+<h1>Welcome To Crofton Design Planning App</h1>
 
+ <!--  
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
         Launch demo modal
       </button>
       
-      <!-- Modal -->
+   
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -19,8 +20,8 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-              <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+               <button type="button" class="btn btn-primary">Save changes</button> 
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
