--- a/ClientApp/app/components/planningapp-list/planningapp-list.component.html
+++ b/ClientApp/app/components/planningapp-list/planningapp-list.component.html
@@ -23,7 +23,7 @@
       padding: 8px;
   }
   
-  tr:nth-child(even) {background-color: #f2f2f2;} */
+  tr:nth-child(even) {background-color: #f2f2f2;} 
   </style>
 </head>
 <div class="well">
@@ -64,7 +64,7 @@
       <td>{{ v.applicationNo }}</td>
       <td>{{ v.completionDate }}</td>
       <td>
-        <a [routerLink]="['/planningapps/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
+        <a [routerLink]="['/planningapps/', v.id]" [skipLocationChange]="true" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
       </td>
     </tr>
 </table>
