--- a/ClientApp/app/components/planningappstate-form/planningappstate-form.component.html
+++ b/ClientApp/app/components/planningappstate-form/planningappstate-form.component.html
@@ -67,7 +67,7 @@
                         <button class="btn btn-primary" type="button" (click)="submit()">Save</button>   
                     </div>        
                     <div class="col-sm-1">  
-                        <button class="btn btn-primary" [routerLink]="['/planningapps/', planningAppState.planningAppId]" type="button">Close</button>    
+                        <button class="btn btn-primary" [skipLocationChange]="true" [routerLink]="['/planningapps/', planningAppState.planningAppId]" type="button">Close</button>    
                     </div>    
                     <div class="col-sm6"></div>  
                 </div> 
