--- a/ClientApp/app/components/customer-list/customer-list.component.html
+++ b/ClientApp/app/components/customer-list/customer-list.component.html
@@ -54,7 +54,7 @@
         <a [routerLink]="['/customers/edit/', v.id]" class="btn btn-primary btn-xs glyphicon glyphicon-edit"></a>
       </td>
       <td>
-          <a [routerLink]="['/customers/planningapps/', v.id]" class="btn btn-info btn-xs">Applications <span class="badge">{{ v.planningAppsCount }}</span></a>
+          <a [routerLink]="['/customers/planningapps/', v.id]" class="btn btn-info btn-xs"> <span class="badge">{{ v.planningAppsCount }}</span></a>
         </td>
     </tr>
   </tbody>
