--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -1,6 +1,6 @@
 <h3>Planning Ref : {{ planningApp.planningReferenceId }}</h3>
 
-  {{ error | json }}
+  <!-- {{ error | json }} -->
 <form class="form-horizontal" *ngIf="planningApp.planningStatus=='Terminated'">
 <div class="form-group">
       <div class="col-sm-2">
