--- a/ClientApp/app/components/customer-form/customer-form.component.html
+++ b/ClientApp/app/components/customer-form/customer-form.component.html
@@ -32,6 +32,10 @@
                 </div>
                 </div>
 
+                <div *ngIf="errors" class="alert alert-danger" role="alert">
+                    <strong>Oops!</strong> {{errors}}
+                  </div> 
+                  
                 <div class="form-group">
                     <label class="control-label col-sm-1" for="address1">AddressLine1</label>
                     <div class="col-sm-6">
@@ -93,6 +97,7 @@
                     </div>
                     <div class="col-sm-8"></div>
                 </div>  
+
 
                 
                 <div class="form-group">
